Correcting the title on the POST page

--- a/post_test.html
+++ b/post_test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 	<head>
 		<title>
-			JQuery AJAX GET test
+			JQuery AJAX POST test
 		</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	</head>
